# WEOMlink

./: CMakeLists.txt  LICENSE  readme.md
.github/workflows/: docs-pdf.yml
cmake/: doxygen-awesome-css.cmake
documentation/: registers.dox  workswell_style.css
examples/weomlink_desktop_demo/: CMakeLists.txt  boostdatalinkinterface.cpp  boostdatalinkinterface.h  elapsedtimer.cpp  elapsedtimer.h  main.cpp  readme.md
examples/weomlink_desktop_demo/cmake/: boost.cmake
examples/weomlink_esp_demo/: CMakeLists.txt
examples/weomlink_esp_demo/.devcontainer/: Dockerfile  devcontainer.json
examples/weomlink_esp_demo/cmake/: etl.cmake
examples/weomlink_esp_demo/components/buttons/: CMakeLists.txt  buttons.cpp
examples/weomlink_esp_demo/components/guicontrol/: connectionscreen.cpp  guicontrol.cpp  menu.cpp  menuitems.cpp
examples/weomlink_esp_demo/components/guicontrol/include/: connectionscreen.hpp  guiaction.hpp  guicontrol.hpp  menu.hpp  menuitems.hpp
examples/weomlink_esp_demo/components/led/: CMakeLists.txt  led.cpp
examples/weomlink_esp_demo/components/uart/: CMakeLists.txt  uart.cpp
examples/weomlink_esp_demo/components/uart/include/: uart.hpp
examples/weomlink_esp_demo/main/: CMakeLists.txt
examples/weomlink_esp_kaluga_demo/: README.md  sdkconfig.defaults
examples/weomlink_esp_kaluga_demo/components/buttons/include/: buttons.hpp
examples/weomlink_esp_kaluga_demo/components/guicontrol/: CMakeLists.txt  displaylockguard.cpp  guiaction.cpp  guicontrol.cpp
examples/weomlink_esp_kaluga_demo/components/guicontrol/include/: displaylockguard.hpp  guicontrol.hpp
examples/weomlink_esp_kaluga_demo/components/led/include/: led.hpp
examples/weomlink_esp_kaluga_demo/main/: idf_component.yml  main.cpp
examples/weomlink_esp_s3_box_demo/: .gitignore  README.md  sdkconfig.defaults  sdkconfig.good
examples/weomlink_esp_s3_box_demo/.devcontainer/: Dockerfile  devcontainer.json
examples/weomlink_esp_s3_box_demo/components/guicontrol/: CMakeLists.txt  connectionscreen.cpp  guicontrol.cpp  menu.cpp  menuitems.cpp
examples/weomlink_esp_s3_box_demo/components/guicontrol/include/: connectionscreen.hpp  guicontrol.hpp  menu.hpp  menuitems.hpp
examples/weomlink_esp_s3_box_demo/components/uart/: CMakeLists.txt
examples/weomlink_esp_s3_box_demo/components/uart/include/: uart.hpp
examples/weomlink_esp_s3_box_demo/main/: idf_component.yml  main.cpp
wl/: error.h  time.h  weom.cpp  weom.h
wl/communication/: addressrange.cpp  addressrange.h  idatalinkinterface.h  ideviceinterface.cpp  ideviceinterface.h  iprotocolinterface.h  protocolinterfacetcsi.cpp  protocolinterfacetcsi.h  tcsipacket.cpp  tcsipacket.h
wl/dataclasses/: agcnhsmoothing.h  auxpin.h  auxpinmode.h  baudrate.h  contrastbrightness.cpp  contrastbrightness.h  firmwareversion.cpp  firmwareversion.h  framerate.h  imageequalizationtype.h  imageflip.cpp  imageflip.h  imagegenerator.h  internalshutterposition.h  presetid.cpp  presetid.h  reticletype.h  shutterupdatemode.h  status.cpp  status.h  timedomainaveraging.h  triggermode.h  triggers.cpp  triggers.h  videoformat.h
wl/misc/: elapsedtimer.cpp  elapsedtimer.h  endian.h
wl/weom/: deviceinterfaceweom.cpp  deviceinterfaceweom.h  memoryspaceweom.cpp  memoryspaceweom.h
